--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -3,3 +3,8 @@ $secondary-clr: #00d9ff;
 $accent-clr: #ff3400;
 $clr-headings: #1b0760;
 $clr-body-txt: #918ca4;
+
+$gutter: 1.5rem;
+
+$desktop-width: 1024px;
+$tablet-width: 768px;
