Build arrow link component

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -5,3 +5,6 @@
 // import abstract modules
 @use 'abstracts/variables';
 @use 'abstracts/mixins';
+
+//import component modules
+@use 'components/link';
