--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -80,5 +80,35 @@ a {
     font-size: 1.5rem;
   }
 }
+.badge {
+  border-radius: 20px;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 0.5rem 3rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background-color: #2584ff;
+  color: #fff;
+}
+
+.badge--secondary {
+  background-color: #00d9ff;
+  color: #fff;
+}
+
+.badge--small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+  .badge--small {
+    font-size: 1.2rem;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
