--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -1,8 +1,10 @@
-$primary-clr: #2584ff;
-$secondary-clr: #00d9ff;
-$accent-clr: #ff3400;
+$clr-primary: #2584ff;
+$clr-secondary: #00d9ff;
+$clr-accent: #ff3400;
 $clr-headings: #1b0760;
 $clr-body-txt: #918ca4;
+
+$clr-white: #fff;
 
 $gutter: 1.5rem;
 
