--- a/styles/scss/components/_link.scss
+++ b/styles/scss/components/_link.scss
@@ -5,7 +5,7 @@ a {
 }
 
 .link-arrow {
-  color: $accent-clr;
+  color: $clr-accent;
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 700;
