--- a/styles/scss/components/_link.scss
+++ b/styles/scss/components/_link.scss
@@ -9,16 +9,16 @@ a {
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 700;
-}
 
-.link-arrow::after {
-  content: '-->';
-  margin-left: 5px;
-  transition: margin 0.15s;
-}
+  &::after {
+    content: '-->';
+    margin-left: 5px;
+    transition: margin 0.15s;
+  }
 
-.link-arrow:hover::after {
-  margin-left: 10px;
+  &:hover::after {
+    margin-left: 10px;
+  }
 }
 
 @media screen and (min-width: $desktop-width) {
