--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -131,5 +131,23 @@ a {
     padding-left: 0;
   }
 }
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: #2584ff;
+}
+
+.icon-container {
+  background: #f3f9fa;
+  width: 64px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /*# sourceMappingURL=styles.css.map */
