--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -47,7 +47,7 @@ p {
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
@@ -148,6 +148,58 @@ a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+
+.btn {
+  border-radius: 40px;
+  border: 0;
+  cursor: pointer;
+  font-size: 1.8rem;
+  font-weight: 600;
+  padding: 2rem 3rem;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+.btn--primary {
+  background-color: #2584ff;
+  color: #fff;
+}
+.btn--primary:hover {
+  background-color: #58a1ff;
+}
+.btn--secondary {
+  background-color: #00d9ff;
+  color: #fff;
+}
+.btn--secondary:hover {
+  background-color: #33e1ff;
+}
+.btn--accent {
+  background-color: #ff3400;
+  color: #fff;
+}
+.btn--accent:hover {
+  background-color: #ff5d33;
+}
+.btn--outline {
+  background-color: #fff;
+  color: #1b0760;
+  border: 2px solid #1b0760;
+}
+.btn--outline:hover {
+  background-color: #1b0760;
+  color: #fff;
+}
+.btn--block {
+  width: 100%;
+  display: inline-block;
+}
+
+@media screen and (min-width: 1024px) {
+  .btn {
+    font-size: 1.5rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
