Build input and input group components

--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -3,10 +3,12 @@ $clr-secondary: #00d9ff;
 $clr-accent: #ff3400;
 $clr-headings: #1b0760;
 $clr-body-txt: #918ca4;
+$clr-borders: #ccc;
 
 $clr-white: #fff;
 
 $gutter: 1.5rem;
+$border-radius: 30px;
 
 $desktop-width: 1024px;
 $tablet-width: 768px;
