--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -12,3 +12,5 @@
 @use 'components/list';
 @use 'components/icon';
 @use 'components/button';
+@use 'components/input';
+@use 'components/input-group';
