--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -201,5 +201,36 @@ a {
     font-size: 1.5rem;
   }
 }
+.input {
+  border-radius: 30px;
+  border: 1px solid #ccc;
+  color: #1b0760;
+  font-size: 2rem;
+  outline: 0;
+  padding: 1.5rem 3.5rem;
+}
+
+::placeholder {
+  color: #cdcbd7;
+}
+
+@media screen and (min-width: 1024px) {
+  .input {
+    font-size: 1.5rem;
+  }
+}
+.input-group {
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  display: flex;
+}
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+  padding: 1.5rem 1rem;
+}
+.input-group .btn {
+  margin: 4px;
+}
 
 /*# sourceMappingURL=styles.css.map */
