Build card component

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -233,4 +233,33 @@ a {
   margin: 4px;
 }
 
+.card {
+  border-radius: 7px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 7%;
+}
+
+.card--primary .card__header {
+  background: #2584ff;
+  color: #fff;
+}
+
+.card--secondary .card__header {
+  background: #00d9ff;
+  color: #fff;
+}
+
+.card--primary .badge--primary {
+  background: #126de4;
+}
+
+.card--secondary .badge--secondary {
+  background: #02cdf1;
+}
+
 /*# sourceMappingURL=styles.css.map */
