Build quote component

--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $clr-secondary: #00d9ff;
 $clr-accent: #ff3400;
 $clr-headings: #1b0760;
 $clr-body-txt: #918ca4;
+$clr-body-darker: #5c5577;
 $clr-borders: #ccc;
 
 $clr-white: #fff;
