--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -18,3 +18,6 @@
 @use 'components/plan';
 @use 'components/media-object';
 @use 'components/quote';
+
+// import layout modules
+@use 'layouts/grid';
