Build testimonial component

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -18,6 +18,7 @@
 @use 'components/plan';
 @use 'components/media-object';
 @use 'components/quote';
+@use 'components/testimonial';
 
 // import layout modules
 @use 'layouts/grid';
