Build callout component

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -19,6 +19,7 @@
 @use 'components/media-object';
 @use 'components/quote';
 @use 'components/testimonial';
+@use 'components/callout';
 
 // import layout modules
 @use 'layouts/grid';
