--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -379,17 +379,14 @@ a {
 .testimonial {
   padding: 3rem;
 }
-
 .testimonial .quote {
   margin: 2rem 0;
   font-size: 110%;
 }
-
 .testimonial__image {
   position: relative;
   margin: 0 3rem;
 }
-
 .testimonial__image > .icon-container {
   position: absolute;
   top: 3rem;
@@ -404,6 +401,39 @@ a {
     margin: 5rem 0 0 6rem;
     font-size: 120%;
     line-height: 1.5;
+  }
+}
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+}
+.callout--primary {
+  background: #2584ff;
+  color: #fff;
+}
+.callout__heading {
+  color: #fff;
+  margin-top: 0;
+  font-size: 3rem;
+}
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+}
+.callout__content {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+  .callout__content {
+    text-align: left;
+  }
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
   }
 }
 .grid {
