--- a/styles/scss/components/_testimonial.scss
+++ b/styles/scss/components/_testimonial.scss
@@ -2,25 +2,25 @@
 
 .testimonial {
   padding: 3rem;
+
+  & .quote {
+    margin: 2rem 0;
+    font-size: 110%;
+  }
+
+  &__image {
+    position: relative;
+    margin: 0 3rem;
+  }
+
+  &__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+  }
 }
 
-.testimonial .quote {
-  margin: 2rem 0;
-  font-size: 110%;
-}
-
-.testimonial__image {
-  position: relative;
-  margin: 0 3rem;
-}
-
-.testimonial__image > .icon-container {
-  position: absolute;
-  top: 3rem;
-  right: -32px;
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: $tablet-width) {
   .testimonial__image {
     margin: 0;
   }
