Build collapsible component

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -20,6 +20,7 @@
 @use 'components/quote';
 @use 'components/testimonial';
 @use 'components/callout';
+@use 'components/collapsible';
 
 // import layout modules
 @use 'layouts/grid';
