--- a/styles/scss/components/_icon.scss
+++ b/styles/scss/components/_icon.scss
@@ -9,6 +9,10 @@
   fill: $clr-primary;
 }
 
+.icon--white {
+  fill: $clr-white;
+}
+
 .icon-container {
   background: #f3f9fa;
   width: 64px; // absolute unit since the size will never
