--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -22,6 +22,7 @@
 @use 'components/callout';
 @use 'components/collapsible';
 @use 'components/block';
+@use 'components/navbar';
 
 // import layout modules
 @use 'layouts/grid';
