--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -23,6 +23,7 @@
 @use 'components/collapsible';
 @use 'components/block';
 @use 'components/navbar';
+@use 'components/hero-block';
 
 // import layout modules
 @use 'layouts/grid';
