--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -24,6 +24,7 @@
 @use 'components/block';
 @use 'components/navbar';
 @use 'components/hero-block';
+@use 'components/domain-block';
 
 // import layout modules
 @use 'layouts/grid';
