Build plans block

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -25,6 +25,7 @@
 @use 'components/navbar';
 @use 'components/hero-block';
 @use 'components/domain-block';
+@use 'components/plans-block';
 
 // import layout modules
 @use 'layouts/grid';
