Build showcase block

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -26,6 +26,7 @@
 @use 'components/hero-block';
 @use 'components/domain-block';
 @use 'components/plans-block';
+@use 'components/showcase-block';
 
 // import layout modules
 @use 'layouts/grid';
