--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -27,6 +27,7 @@
 @use 'components/domain-block';
 @use 'components/plans-block';
 @use 'components/showcase-block';
+@use 'components/footer';
 
 // import layout modules
 @use 'layouts/grid';
